fix: collapse

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -290,9 +290,9 @@ $font-size-sm:                $font-size-base * .875 !default;
 
 $font-weight-lighter:         lighter !default;
 $font-weight-light:           200 !default;
-$font-weight-normal:          300 !default;
+$font-weight-normal:          400 !default;
 $font-weight-bold:            700 !default;
-$font-weight-bolder:          500 !default;
+$font-weight-bolder:          600 !default;
 
 $font-weight-base:            $font-weight-normal !default;
 $line-height-base:            1.5 !default;
