--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -414,7 +414,7 @@ h3 {
   margin-bottom: -1px;
   border: darken($white, 80%) 1px solid;
 
-  &.collapsed {
+  .collapsed {
     color: $primary;
 
     &::after {
@@ -431,12 +431,16 @@ h3 {
   position: relative;
   padding: 2rem 70px;
   font-weight: $font-weight-bold;
-  cursor: pointer;
 
   @include transition;
 
   @include media-breakpoint-down(sm) {
     padding: 1rem 30px;
+  }
+
+  &.collapsed:hover {
+    text-decoration: underline;
+    cursor: pointer;
   }
 
   &::before,
